--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<div class="con">
 											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero Checkout</a></h3>
 											<span>Co-Founder & Head of Product</span>
-											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+											<div style="margin-top:55px; color:#fcfcfc; margin-bottom:25px;">
 											Founded in October 2020 <br/> Currently Gathering Letters of Intent
 											</div>
 
-											<a href="https://app.netzero.world/checkout.html" style="margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; text-decoration:underline; font-weight:700;">Visit Website</a>
+											<a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out <i class="fas fa-arrow-circle-right"></i></a>
 											<!--<p class="icon">
 												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											</p>-->
