--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								<div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NetZero Checkout</a></h3>
+											<h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NETZERO CHECKOUT</a></h3>
 											<span>Co-Founder & Head of Product</span>
 											<div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
 											Founded in October 2020 <br/> Currently Gathering Letters of Intent
