--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<h3><a href="https://www.carbonly.org">Carbonly</a></h3>
 									<span>Founder and CEO</span>
 									<div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-									Entered Pioneer's Startup Accelerators <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
+									Entered The Pioneer.app Startup Accelerator <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
 									</div>
 
 									<a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
