--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
                 <div style="margin-top:-90px; display:block; height:0px;"></div>
 
-                <section class="colorlib-work" data-section="work" id="work">
+                <section class="colorlib-work" data-section="work" id="work" style="margin-bottom:-20px;">
                     <div class="colorlib-narrow-content">
                         <div class="row">
                             <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
