--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </aside>
 
             <div id="colorlib-main">
-                <section id="colorlib-hero" class="js-fullheight" data-section="home" style="margin-bottom:-30px;">
+                <section id="colorlib-hero" class="js-fullheight" data-section="home" style="margin-bottom:-10x;">
                     <div class="flexslider js-fullheight">
                         <ul class="slides">
                             <li style="background-image: url(images/img_bg_1.jpg);">
