--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
 				</div>
 			</section> -->
 
-                <section class="colorlib-contact" data-section="contact" id="contact">
+                <section class="colorlib-contact" data-section="contact" id="contact" style="margin-top:-20px;">
                     <div class="colorlib-narrow-content">
                         <div class="row">
                             <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
