--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
             document.getElementById("novaterra_box").style.display = "inline";
             document.getElementById("cody_box").style.display = "inline";
         }
+
+        function scrollDown() {
+            window.scrollBy(0, 100);
+        }
     </script>
 
 </head>
@@ -272,7 +276,7 @@
                                                     <h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
                                                     <h2 style="color:#fff">A Full-Stack Developer in Berkeley</h2>
                                                     <!-- <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p> -->
-                                                    <!--<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>-->
+                                                    <p><a onclick="scrollDown();" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">Scroll Down! <i class="icon-briefcase3"></i></a></p>
                                                 </div>
                                             </div>
                                         </div>
