--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@
                                                     <h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
                                                     <h2 style="color:#fff">A Full-Stack Developer in Berkeley</h2>
                                                     <!-- <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p> -->
+                                                    
+                                                    <h2 style="color:#fff">Scroll Down -></h2>
                                                     <p><a onclick="scrollDown();" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">Scroll Down! <i class="icon-briefcase3"></i></a></p>
                                                 </div>
                                             </div>
