--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
                 <section class="colorlib-work" data-section="work" id="work" style="margin-bottom:-60px;">
                     <div class="colorlib-narrow-content">
                         <div class="row">
-                            <div class="col-md-6 col-md-offset-3 col-md-pull-3" data-animate-effect="fadeInLeft">
+                            <div class="col-md-6 col-md-offset-3 col-md-pull-3">
                                 <span class="heading-meta">Recent Work</span>
-                                <h2 class="colorlib-heading animate-box">My Projects</h2>
+                                <h2 class="colorlib-heading">My Projects</h2>
                             </div>
                         </div>
                         <div style="margin-top:-60px; display:block; height:0px; float:none;"></div>
@@ -471,7 +471,7 @@
                             </div>
                         </div>
 
-                        <div id="connect_box" class="col-md-6 animate-box" style="border-radius:10px;">
+                        <div id="connect_box" class="col-md-6" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/connect.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -494,7 +494,7 @@
                             </div>
                         </div>
 
-                        <div id="novaterra_box" class="col-md-6 animate-box" style="border-radius:10px;">
+                        <div id="novaterra_box" class="col-md-6" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/novaterra.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
